estoy con translate eng, cas y cat

--- a/src/assets/i18n/cas.json
+++ b/src/assets/i18n/cas.json
@@ -9,64 +9,22 @@
     "name": "Denominación",
     "ubication": "Ubicación",
     "city": "Localidad",
-    "totalActivityReported": "Actividad total reportada",
-    "sustainabilityIndicatorsCharts": "Gráficas de indicadores",
+
+    "empresasEconSocial": "Empresas-Econ.Social",
+    "empresas": "Empresas",
+    "econSocial": "Economía Social",
+    "autonomo": "Autónomo",
+    "emprendedor": "Emprendedor",
+    "comercio": "Comercio",
+    "internacionalizacion": "Internacionalización",
+    "proyectosEstrategicos": "Proyectos estratégicos",
+    "search": "Buscar",
+    "visitSite": "Visita el sitio",
+    "moreInfo": "+ info",
 
     "companyName": "Nombre de la empresa",
     "companyAddress": "Domicilio",
     "companyCNAE": "CNAE de la empresa",
-
-    "activityData": "Datos ambientales",
-    "productionData": "Datos de producción",
-    "billingList": "Listado de facturación",
-    "personsList": "Listado de personal",
-    "monthlyObjective": "Objetivo mensual",
-
-    "aspects": "Aspectos",
-    "energies": "Energías",
-    "residues": "Residuos",
-
-    "companyActivityData": "Datos de actividad de mi empresa",
-    "consumptionList": "Listado de consumos:",
-    "delegation": "Emplazamiento",
-    "delegationAdd": "Añadir emplazamiento",
-    "delegationList": "Emplazamientos de esta empresa",
-
-    "aspect": "Aspecto",
-    "energy": "Energía",
-    "water": "Agua",
-    "waterConsumption": "Consumo de agua",
-
-    "energyType": "Consumo de",
-    "energyConsumption": "Consumo de energía",
-
-    "residueType": "Tipo de residuo",
-    "residue": "Residuo",
-    "residueConsumption": "Generación de residuos",
-    "residueDestination": "Destino del residuo (%)",
-    "reuse": "Reutilización",
-    "recycling": "Reciclado",
-    "incineration": "Incineración",
-    "dump": "Vertedero",
-    "compost": "Compostaje",
-    "emissions": "Emisiones",
-    "emissionConsumption": "Emisiones de CO2e (T)",
-
-
-    "scopeOne": "Alcance uno",
-    "scopeTwo": "Alcance dos",
-    "quantity": "Cantidad",
-    "quantityCO2e": "Cantidad (T de CO2e)",
-    "year": "Año",
-    "fromDate": "Desde",
-    "toDate": "Hasta",
-    "monthAndYear": "Mes y año",
-    "actions": "ACCIONES ",
-
-    "billing": "Facturación (€)",
-    "monthlyBilling": "Facturación mes",
-    "persons": "Media personal",
-    "monthlyPersons": "Personal mes",
 
     "copyright": "Creado por el Instituto de Innovación Empresarial de las Islas Baleares",
     "workSession": "Iniciar sesión de trabajo",
