--- a/src/assets/i18n/cat.json
+++ b/src/assets/i18n/cat.json
@@ -9,55 +9,23 @@
     "name": "Denominació",
     "ubication": "Ubicació",
     "city": "Localitat",
-    "totalActivityReported": "Activitat total reportada",
-    "sustainabilityIndicatorsCharts": "Gràfiques d'indicadors",
+
+    "empresasEconSocial": "Empreses-Econ.Social",
+    "empresas": "Empresas",
+    "econSocial": "Economia Social",
+    "autonomo": "Autònom",
+    "emprendedor": "Emprenedor",
+    "comercio": "Comerç",
+    "internacionalizacion": "Internacionalització",
+    "proyectosEstrategicos": "Projectes estratègics",
+    "search": "Cercar",
+    "visitSite": "Visita el lloc",
+    "moreInfo": "+ info",
 
     "companyName": "Nom de l'empresa",
     "companyAddress": "Domicili",
     "companyCNAE": "CNAE de l'empresa",
 
-    "activityData": "Dades ambientals",
-    "productionData": "Dades de producció",
-    "billingList": "Llistat de facturació",
-    "personsList": "Llistat de personal",
-    "monthlyObjective": "Objetiu mensual",
-
-    "aspects": "Aspectes",
-    "energies": "Energies",
-    "residues": "Residus",
-
-    "companyActivityData": "Dades d'activitat de la meva empresa",
-    "consumptionList": "Llistat de consums:",
-    "delegation": "Emplaçament",
-    "delegationAdd": "Afegir emplaçament",
-    "delegationList": "Emplaçaments d'aquesta empresa",
-
-    "aspect": "Aspecte",
-    "energy": "Energia",
-    "water": "Aigua",
-    "waterConsumption": "Consum d'aigua",
-
-    "energyType": "Consum de",
-    "energyConsumption": "Consum d'energia",
-
-    "residueType": "Tipus de residu",
-    "residue": "Residu",
-    "residueConsumption": "Generació de residus",
-    "residueDestination": "Destinació del residu (%)",
-    "reuse": "Reutilització",
-    "recycling": "Reciclatge",
-    "incineration": "Incineració",
-    "dump": "Abocador",
-    "compost": "Compostatge",
-
-    "emissions": "Emissions",
-    "emissionConsumption": "Emissions de CO2e (T)",
-
-    "scopeOne": "Abast un",
-    "scopeTwo": "Abast dos",
-    "quantity": "Quantitat",
-    "quantityCO2e": "Quantitat (T de CO2e)",
-    "year": "Any",
 
     "fromDate": "Des de",
     "toDate": "Fins a",
@@ -112,13 +80,13 @@
     "isRequired": " és obligatori.",
     "fieldValue": "Aquest camp",
 
-    "gettingFeaturedIDI": "Obtenint destacats IDI ...",
-    "gettingNews": "Obtenint les darreres notícies de l'IDI ...",
+    "gettingFeaturedIDI": "Obtenint destacats PIEIB ...",
+    "gettingNews": "Obtenint les darreres notícies de l'PIEIB ...",
     "gettingServices": "Obtenint els nostres serveis per empreses i per emprenedors ...",
-    "gettingContentsIDI": "Obtenint continguts de l'IDI ...",
-    "descubreServiciosIDI": "Descobreix els nostres serveis per a empreses i emprenedors",
-    "comoAyudaIDI": "Com t'ajuda l'IDI?",
-    "otrosServiciosIDI": "Altres serveis de l'IDI",
+    "gettingContentsPIEIB": "Obtenint continguts de l'PIEIB ...",
+    "descubreServiciosPIEIB": "Descobreix els nostres serveis per a empreses i emprenedors",
+    "comoAyudaPIEIB": "Com t'ajuda l'PIEIB?",
+    "otrosServiciosPIEIB": "Altres serveis de l'PIEIB",
     "NewsLetterSubs": "Subscriu-te al butlletí de notícies:",
     "ArchivadoEn": "Arxivat com:",
 
