--- a/src/assets/i18n/eng.json
+++ b/src/assets/i18n/eng.json
@@ -6,11 +6,21 @@
   "home": "Home",
   "login": "Login",
   "logout": "Logout",
-  "totalActivityReported": "Total activity reported",
+  "name": "Denominación",
+  "ubication": "Ubicación",
+  "city": "Localidad",
 
-  "aspects": "Aspects",
-  "energies": "Energies",
-  "residues": "Residues",
+  "empresasEconSocial": "Companies-Social econ.",
+  "empresas": "Companies",
+  "econSocial": "Social economy",
+  "autonomo": "Self-employed",
+  "emprendedor": "Entrepreneur",
+  "comercio": "Trade",
+  "internacionalizacion": "Internacionalization",
+  "proyectosEstrategicos": "Strategic projects",
+  "search": "Search",
+  "visitSite": "Visit the site",
+  "moreInfo": "+ info",
 
   "copyright": "Created by Instituto de Innovación Empresarial de las Islas Baleares",
   "workSession": "Work session",
@@ -29,17 +39,7 @@
     "Update": "Update",
     "Error": "Please, set the required values.",
 
-    "Emprendedor": "Emprendedor",
-    "Empresa": "Empresa",
-    "Sectores": "Sectores",
-    "Ayudas_Subv": "Ayudas y subvenciones",
-    "Formacion": "Formación",
-    "Transparencia": "Transparencia",
-    "Sede_Elect": "Sede electrónica",
 
-    "noticiasTitle": "News",
-
-    "gettingFeaturedIDI": "Getting featured data from IDI ...",
-    "descubreServiciosIDI": "Descubre nuestros servicios para empresas y emprendedores",
+    "gettingFeaturedPIEIB": "Getting featured data from pieib ...",
     "NewsLetterSubs": "Subscribe to our newsletter:"
   }
