he añadido el slider de la home

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -21,6 +21,9 @@
     "search": "Cercar",
     "visitSite": "Visita el lloc",
     "moreInfo": "+ info",
+    "previous": "Anterior",
+    "next": "Següent",
+
 
     "companyName": "Nom de l'empresa",
     "companyAddress": "Domicili",
