--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,6 +21,8 @@
   "search": "Search",
   "visitSite": "Visit the site",
   "moreInfo": "+ info",
+  "previous": "Previous",
+  "next": "Next",
 
   "copyright": "Created by Instituto de Innovación Empresarial de las Islas Baleares",
   "workSession": "Work session",
