--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -21,6 +21,8 @@
     "search": "Buscar",
     "visitSite": "Visita el sitio",
     "moreInfo": "+ info",
+    "previous": "Anterior",
+    "next": "Siguiente",
 
     "companyName": "Nombre de la empresa",
     "companyAddress": "Domicilio",
