he traducido el footer

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -23,6 +23,12 @@
     "moreInfo": "+ info",
     "previous": "Anterior",
     "next": "Següent",
+    "whatWeDo": "Que fem",
+    "services": "Serveis",
+    "usefulLinks": "Enllaços d'interès",
+    "contact": "Contacta'ns",
+
+
 
 
     "companyName": "Nom de l'empresa",
