--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,11 @@
   "moreInfo": "+ info",
   "previous": "Previous",
   "next": "Next",
+  "whatWeDo": "What we do",
+  "services": "Services",
+  "usefulLinks": "Useful Links",
+  "contact": "Contact",
+
 
   "copyright": "Created by Instituto de Innovación Empresarial de las Islas Baleares",
   "workSession": "Work session",
