--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -23,6 +23,11 @@
     "moreInfo": "+ info",
     "previous": "Anterior",
     "next": "Siguiente",
+    "whatWeDo": "Que hacemos",
+    "services": "Servicios",
+    "usefulLinks": "Enlaces de interés",
+    "contact": "Contacta",
+
 
     "companyName": "Nombre de la empresa",
     "companyAddress": "Domicilio",
